# rce-cho-mcp

./: .gitignore  0001-Warn-when-filtering-skos-prefLabel-without-STR-due-t.patch  0001ceoaddressandidentifiersemantics.patch  Dockerfile  RCE-CHO-MCP-connector-uitleg-1.md  README.md  herbemesting.py  pyproject.toml  rcechomcpqueryfixes.patch  render.yaml
docs/: CAPABILITIES.md  CLAUDE_DESKTOP.md  INSTALL.md  LM_STUDIO.md  architecture.md  releasenotesv0.2.0beta.md  roadmap.md  vision.md
examples/reference_client/: README.md  pipeline.py
examples/reference_client/builder/: builder.py
examples/reference_client/patterns/: municipality.py
examples/reference_client/planner/: models.py  parser.py
src/rce_cho_mcp/: catechism.py  config.py  explore.py  graphs.py  http_server.py  ontology.py  pipeline.py  prompts.py  resolver.py  semantics.py  server.py  sparql.py  statistics.py  stats.py  termennetwerk.py  validator.py
src/rce_cho_mcp/builder/: builder.py
src/rce_cho_mcp/ontology/: CEO_RCE.ttl  api.py  loader.py  registry.py
src/rce_cho_mcp/planner/: parser.py
tests/: benchmark_001_zeist.md  benchmark_002_amersfoort.md  benchmark_003_houten_archeologie.md  benchmark_004_zwolle_boerderijen.md  benchmark_005_begraafplaatsen.md
